--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   custom_navigation_bar: ^0.8.2
   supercharged: ^2.1.1
-  simple_animations: ^5.0.2
+  flutter_animate: ^4.2.0+1
 
 dev_dependencies:
   flutter_test:
