--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   custom_navigation_bar: ^0.8.2
   supercharged: ^2.1.1
   flutter_animate: ^4.2.0+1
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
